# imap-codec

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  deny.toml  flake.nix  justfile  rustfmt.toml  shell.nix
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: api.yml  audit.yml  benchmark.yml  bindings_python.yml  build.yml  build_and_test.yml  cache.yml  ci.yml  coverage.yml  issue_opened.yml  main.yml  minimal_versions.yml  release.yml  rust.yml  scheduled.yml  semver.yml
assets/coverage/: grcov.yml
assets/demos/: README.md
assets/demos/client/: Cargo.toml
assets/demos/client/src/: main.rs
assets/demos/tokio-client/: Cargo.toml
assets/demos/tokio-client/src/: main.rs
assets/demos/tokio-server/: Cargo.toml
assets/demos/tokio-server/src/: main.rs
assets/demos/tokio-support/: Cargo.toml
assets/demos/tokio-support/src/: client.rs  server.rs
assets/demos/tokio_client/: Cargo.toml
assets/demos/tokio_client/src/: main.rs
assets/demos/tokio_server/: Cargo.toml
assets/demos/tokio_server/src/: main.rs
assets/docker/: README.md
assets/oauth2/: oauth2.py
benches/: bench.rs  parse_command.rs  parse_response.rs  serialize_command.rs  serialize_response.rs
bindings/imap-codec-python/: Cargo.toml  README.md  imap_codec.pyi  pyproject.toml
bindings/imap-codec-python/examples/: parse_command.py  parse_greeting.py  parse_response.py
bindings/imap-codec-python/examples/common/: __init__.py
bindings/imap-codec-python/src/: encoded.rs  lib.rs  messages.rs
bindings/imap-codec-python/tests/: test_authenticate_data_decode.py  test_authenticate_data_encode.py  test_command_decode.py  test_command_encode.py  test_fragments.py  test_greeting_decode.py  test_greeting_encode.py  test_idle_done_decode.py  test_idle_done_encode.py  test_messages.py  test_response_decode.py  test_response_encode.py  test_sum_as_string.py
bindings/imap-types-python/: Cargo.toml  pyproject.toml
bindings/imap-types-python/src/: lib.rs
examples/: parse_command.rs  parse_greeting.rs  parse_response.rs
fuzz/: Cargo.toml  README.md  blns.dict  imap.dict  terminals.dict
fuzz/fuzz_targets/: authenticate_data.rs  authenticate_data_to_bytes_and_back.rs  command.rs  command_to_bytes_and_back.rs  greeting.rs  greeting_to_bytes_and_back.rs  response.rs  response_to_bytes_and_back.rs
fuzz/src/: lib.rs
imap-codec/: Cargo.toml  README.md
imap-codec/benches/: command.rs  greeting.rs  parse_command.rs  parse_response.rs  response.rs  serialize_command.rs  serialize_response.rs
imap-codec/benchmark/: Cargo.toml
imap-codec/benchmark/benches/: command.rs  greeting.rs  response.rs  trace.rs
imap-codec/examples/: client.rs  fragmentizer.rs  fragmentizer_client.rs  fragmentizer_server.rs  parse_command.rs  parse_greeting.rs  parse_response.rs  server.rs
imap-codec/examples/common/: common.rs
imap-codec/fuzz/: Cargo.toml  README.md
imap-codec/fuzz/fuzz_targets/: authenticate_data.rs  authenticate_data_to_bytes_and_back.rs  command.rs  command_to_bytes_and_back.rs  fragmentizer.rs  greeting.rs  greeting_to_bytes_and_back.rs  response.rs  response_to_bytes_and_back.rs  tags_structured.rs
imap-codec/fuzz/src/: lib.rs
imap-codec/src/: auth.rs  body.rs  codec.rs  command.rs  core.rs  datetime.rs  envelope.rs  extensions.rs  fetch.rs  flag.rs  fragmentizer.rs  internal.rs  lib.rs  mailbox.rs  response.rs  search.rs  section.rs  sequence.rs  status.rs  stream.rs  testing.rs
imap-codec/src/codec/: decode.rs  encode.rs
imap-codec/src/extensions/: binary.rs  compress.rs  condstore_qresync.rs  enable.rs  id.rs  idle.rs  literal.rs  metadata.rs  mod.rs  move.rs  namespace.rs  quota.rs  rfc2177.rs  rfc5161.rs  sort.rs  thread.rs  uidplus.rs
imap-codec/src/rfc3501/: address.rs  body.rs  command.rs  core.rs  datetime.rs  envelope.rs  fetch_attributes.rs  flag.rs  mailbox.rs  mod.rs  response.rs  section.rs  sequence.rs
imap-codec/src/stream/: async.rs
imap-codec/src/stream/async/: tokio.rs
imap-codec/src/stream/async/tokio/: client.rs  server.rs
imap-codec/src/stream/sync/: client.rs
imap-codec/src/tokio/: client.rs  server.rs
imap-codec/tests/: mailru_fetch_repro.rs  readme.rs  trace.rs
imap-types/: Cargo.toml  README.md
imap-types/benches/: bench.rs  serialize_command.rs  serialize_response.rs
imap-types/examples/: serde_json.rs
imap-types/fuzz/: Cargo.toml
imap-types/fuzz/fuzz_targets/: into_owned.rs  into_static.rs  to_static.rs
imap-types/src/: arbitrary.rs  auth.rs  body.rs  codec.rs  command.rs  core.rs  datetime.rs  envelope.rs  error.rs  extensions.rs  fetch.rs  flag.rs  imap4rev1.rs  into_owned.rs  lib.rs  mailbox.rs  response.rs  rfc3501.rs  search.rs  secret.rs  security.rs  sequence.rs  state.rs  status.rs  utils.rs
imap-types/src/arbitrary/: mod.rs
imap-types/src/codec/: mod.rs
imap-types/src/extensions/: binary.rs  compress.rs  condstore_qresync.rs  enable.rs  idle.rs  literal.rs  metadata.rs  mod.rs  move.rs  namespace.rs  quota.rs  rfc2087.rs  rfc2177.rs  rfc4987.rs  rfc5161.rs  rfc7888.rs  rfc9208.rs  sort.rs  thread.rs  uidplus.rs  unselect.rs  utf8.rs
imap-types/src/imap4rev1/: body.rs  command.rs  core.rs  datetime.rs  envelope.rs  fetch_attributes.rs  flag.rs  mailbox.rs  response.rs  section.rs  sequence.rs  status_attributes.rs
imap-types/src/imap4rev1/command/: search.rs
imap-types/src/rfc3501/: address.rs  body.rs  command.rs  core.rs  datetime.rs  envelope.rs  fetch_attributes.rs  flag.rs  mailbox.rs  mod.rs  response.rs  section.rs  sequence.rs  status_attributes.rs
imap-types/tests/: api.rs  arbitrary.rs  readme.rs
src/: auth.rs  body.rs  codec.rs  command.rs  core.rs  datetime.rs  envelope.rs  extensions.rs  fetch.rs  flag.rs  imap4rev1.rs  internal.rs  lib.rs  mailbox.rs  nom_compat.rs  response.rs  rfc3501.rs  search.rs  section.rs  sequence.rs  state.rs  status.rs  testing.rs  tokio.rs  tokio_compat.rs  utils.rs
src/arbitrary/: mod.rs
src/codec/: decode.rs  encode.rs  mod.rs
src/extensions/: compress.rs  enable.rs  (+9 more)
tests/: readme.rs  trace.rs
(+74 files in other folders)
