[package]
name = "imap-codec"
description = "Rock-solid and complete codec for IMAP"
keywords = ["email", "imap", "codec", "parser"]
categories = ["email", "parser-implementations", "encoding", "network-programming"]
version = "1.0.0-dev"
authors = ["Damian Poddebniak <poddebniak@mailbox.org>"]
repository = "https://github.com/duesee/imap-codec"
license = "MIT OR Apache-2.0"
edition = "2021"

[features]
default = []
arbitrary = ["imap-types/arbitrary"]
bounded-static = ["dep:bounded-static", "imap-types/bounded-static"]
serde = ["dep:serde", "chrono/serde", "imap-types/serde"]
tokio = ["dep:bytes", "dep:tokio-util", "bounded-static"]

# IMAP
starttls = ["imap-types/starttls"]

# IMAP Extensions
ext_compress = ["imap-types/ext_compress"]
ext_condstore_qresync = ["imap-types/ext_condstore_qresync"]
ext_enable = ["imap-types/ext_enable"]
ext_idle = ["imap-types/ext_idle"]
ext_literal = ["imap-types/ext_literal"]
ext_login_referrals = ["imap-types/ext_login_referrals"]
ext_mailbox_referrals = ["imap-types/ext_mailbox_referrals"]
ext_move = ["imap-types/ext_move"]
ext_quota = ["imap-types/ext_quota"]
ext_sasl_ir = ["imap-types/ext_sasl_ir"]
ext_unselect = ["imap-types/ext_unselect"]

[dependencies]
abnf-core = "0.5"
base64 = "0.21"
bytes = { version = "1", optional = true }
bounded-static = { version = "0.5.0", optional = true }
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
# The `unchecked` feature unlocks several `unchecked` methods that allow to bypass syntax checks when
# creating types. This may allow to skip duplicate checks when all preconditions are known to be true.
imap-types = { path = "imap-types", default-features = false, features = ["unchecked"] }
nom = "7"
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "1.0.29"
tokio-util = { version = "0.7.1", default-features = false, features = ["codec"], optional = true }

[dev-dependencies]
ansi_term = "0.12"
criterion = "0.4"
# Make `cargo +nightly -Z minimal-versions update` work.
regex = "1.5.3"

[[bench]]
name = "serialize_command"
harness = false

[[bench]]
name = "serialize_response"
harness = false

[[bench]]
name = "parse_command"
harness = false

[[bench]]
name = "parse_response"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = [
    "fuzz",
    "imap-types",
    "imap-types/fuzz",
    "assets/demos/tokio_client",
    "assets/demos/tokio_server",
]
