[workspace]
resolver = "2"
members = [
    "imap-codec",
    "imap-codec/benchmark",
    "imap-codec/fuzz",
    "imap-types",
    "imap-types/fuzz",
    "assets/demos/tokio-support",
    "assets/demos/tokio-client",
    "assets/demos/tokio-server",
]

[patch.crates-io]
imap-types = { path = "imap-types" }
imap-codec = { path = "imap-codec" }
