[package]
name = "imap-codec"
description = "Rock-solid and complete codec for IMAP"
keywords = ["email", "imap", "codec", "parser"]
categories = ["email", "parser-implementations", "encoding", "network-programming"]
version = "2.0.0-alpha.2"
authors = ["Damian Poddebniak <poddebniak@mailbox.org>"]
repository = "https://github.com/duesee/imap-codec"
license = "MIT OR Apache-2.0"
edition = "2021"
exclude = [
    ".github",
]

[features]
default = ["quirk_rectify_numbers", "quirk_missing_text", "quirk_trailing_space"]
# Expose internal parsers for fuzzing
fuzz = []

# <Forward to imap-types>
serde = ["dep:serde", "imap-types/serde"]

# IMAP
starttls = ["imap-types/starttls"]

# IMAP Extensions
ext_condstore_qresync = ["imap-types/ext_condstore_qresync"]
ext_login_referrals = ["imap-types/ext_login_referrals"]
ext_mailbox_referrals = ["imap-types/ext_mailbox_referrals"]
ext_id = ["imap-types/ext_id"]
ext_sort_thread = ["imap-types/ext_sort_thread"]
ext_binary = ["imap-types/ext_binary"]
ext_metadata = ["ext_binary", "imap-types/ext_metadata"]
ext_uidplus = ["imap-types/ext_uidplus"]
# </Forward to imap-types>

# IMAP quirks
#
# These features bypass interoperability issues to allow safe processing of *almost* correct message.
# 
# Make `\r` in `\r\n` optional.
quirk_crlf_relaxed = []
# 
# Rectify (invalid) numbers.
# Observed in ...
# * Dovecot (`-1`)
quirk_rectify_numbers = []
# Add missing `text` by adding [" "] "<missing text>".
# Observed in ...
# * Gmail `* OK [HIGHESTMODSEQ <n>]\r\n`
quirk_missing_text = []
# Encode `A ID ()` as `A ID NIL
# Observed in ...
# * GMX
# * Microsoft Exchange
quirk_id_empty_to_nil = []
# Accept a trailing space in `STATUS` data response.
# Observed in ...
# * Microsoft Exchange `* STATUS INBOX (MESSAGES 100 UNSEEN 0) \n\n`
quirk_trailing_space = []

[dependencies]
abnf-core = "0.6.0"
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
imap-types = { version = "2.0.0-alpha.2", path = "../imap-types", default-features = false, features = ["unvalidated"] }
nom = { version = "7", default-features = false }
log = { version = "0.4.22", default-features = false }
serde = { version = "1.0.203", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = { version = "1.0.119" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
