[package]
name = "imap-types"
description = "Misuse-resistant data structures for IMAP"
keywords = ["email", "imap", "types"]
categories = ["email", "data-structures", "network-programming"]
version = "2.0.0-alpha.1"
authors = ["Damian Poddebniak <poddebniak@mailbox.org>"]
repository = "https://github.com/duesee/imap-codec"
license = "MIT OR Apache-2.0"
edition = "2021"
exclude = [
    ".github",
]

[features]
arbitrary = ["dep:arbitrary", "unvalidated", "chrono/arbitrary", "chrono/std"]
arbitrary_simplified = ["arbitrary"]
bounded-static = ["dep:bounded-static", "bounded-static/derive"]
serde = ["dep:serde", "chrono/serde"]

# IMAP
starttls = []

# IMAP Extensions
ext_condstore_qresync = []
ext_login_referrals = []
ext_mailbox_referrals = []
ext_id = []
ext_sort_thread = []
ext_binary = []
ext_metadata = ["ext_binary"]
ext_uidplus = []

# Unlock `unvalidated` constructors.
unvalidated = []

[dependencies]
arbitrary = { version = "1.3.2", optional = true, features = ["derive"] }
base64 = "0.21"
bounded-static = { version = "0.5.0", optional = true }
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
serde = { version = "1.0.203", features = ["derive"], optional = true }
thiserror = "1.0.61"

[dev-dependencies]
criterion = "0.5.1"
rand = { version = "0.8", default-features = false, features = ["small_rng"] }
serde_json = "1.0.117"

[[example]]
name = "serde_json"
path = "examples/serde_json.rs"
required-features = ["serde"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
