[package]
name = "imap-types"
description = "Misuse-resistant data structures for IMAP"
keywords = ["email", "imap", "types"]
categories = ["email", "data-structures", "network-programming"]
version = "2.0.0-alpha.2"
authors = ["Damian Poddebniak <poddebniak@mailbox.org>"]
repository = "https://github.com/duesee/imap-codec"
license = "MIT OR Apache-2.0"
edition = "2021"
exclude = [
    ".github",
]

[features]
arbitrary = ["dep:arbitrary", "chrono/arbitrary", "chrono/std"]
arbitrary_simplified = ["arbitrary"]
serde = ["dep:serde", "chrono/serde"]

# IMAP
starttls = []

# IMAP Extensions
ext_binary = []
ext_condstore_qresync = []
ext_id = []
ext_login_referrals = []
ext_mailbox_referrals = []
ext_metadata = ["ext_binary"]
ext_sort_thread = []
ext_uidplus = []

[dependencies]
arbitrary = { version = "1.3.2", optional = true, default-features = false, features = ["derive"] }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
bounded-static = { version = "0.8.0", default-features = false, features = ["alloc"] }
bounded-static-derive = { version = "0.8.0", default-features = false }
chrono = { version = "0.4", default-features = false }
serde = { version = "1.0.204", features = ["derive"], optional = true }
thiserror = "1.0.62"

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false }
rand = { version = "0.8", default-features = false, features = ["small_rng"] }
serde_json = { version = "1.0.120", default-features = false }

[[example]]
name = "serde_json"
path = "examples/serde_json.rs"
required-features = ["serde"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
