[package]
name = "imap-codec-python"
description = "Python bindings for imap-codec"
version = "0.1.0-dev1"
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "imap_codec"
crate-type = ["cdylib"]
# required as this lib name is identical to `imap-codec`
doc = false

[dependencies]
imap-codec = { version = "2.0.0-alpha.2", path = "../../imap-codec", features = ["serde"] }
pyo3 = "0.22.1"
serde-pyobject = "0.4.0"
