[package]
name = "imap-codec-bench"
version = "0.0.0"
publish = false
edition = "2021"
license = "MIT OR Apache-2.0"

[dev-dependencies]
imap-types = { path = "../../imap-types" }
imap-codec = { path = "../../imap-codec" }
criterion = "0.5.1"
imap-proto = "0.16.5"
imap-proto-stalwart = { package = "imap_proto", git = "https://github.com/stalwartlabs/mail-server", rev = "53f0222f308b3e844c158fc0e603d10361da3c63" }

[[bench]]
name = "greeting"
harness = false

[[bench]]
name = "command"
harness = false

[[bench]]
name = "response"
harness = false

[[bench]]
name = "trace"
harness = false
