[package]
name = "tokio-support"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
bounded-static = "0.5.0"
thiserror = "1.0.61"
tokio-util = { version = "0.7.11", features = ["codec"] }

imap-codec = { path = "../../../imap-codec", features = ["bounded-static"] }
