[package]
name = "tokio-support"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
quirk_crlf_relaxed = ["imap-codec/quirk_crlf_relaxed"]

[dependencies]
bytes = "1.6.1"
thiserror = "1.0.63"
tokio-util = { version = "0.7.11", features = ["codec"] }

imap-codec = { path = "../../../imap-codec" }
