[package]
name = "tokio_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
futures = "0.3"
imap-codec = { path = "../../../", features = ["tokio", "ext_sasl_ir", "ext_literal", "ext_idle", "ext_enable"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
