[package]
name = "tokio_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
imap-codec = { path = "../../../", features = ["tokio_util_codec"] }
tokio = { version = "*", features = ["full"] }
tokio-util = { version = "*", features = ["codec"] }
